git commit -m "colour change"

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   <body>
     <h1 style="color: aquamarine; background-color: blue" Hallo World></h1>
     <div style="display: flexbox" halloagain></div>
+    <h2
+      style="
+        background-color: blueviolet;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      "
+      and
+      again
+    ></h2>
   </body>
 </html>
